# security-checker

./: .gitignore  README.md  action.yml  flake.nix  pyproject.toml  vulnerability_checker_results.md
.github/workflows/: linter.yml  publish.yml
src/security_checker/: cli.py
