[project]
name = "security-checker"
version = "0.2.2"
description = "A comprehensive command-line tool to check security-related issues in your projects, including vulnerability scanning and license compliance checking."
authors = [
    { name = "Ja-sonYun", email = "killa30867@gmail.com" }
]
keywords = ["security", "vulnerability", "license", "compliance", "scanning", "dependencies"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Security",
    "Topic :: Software Development :: Quality Assurance",
    "Topic :: System :: Systems Administration",
]
dependencies = [
    "pydantic>=2.11.5",
    "httpx>=0.28.1",
    "rich>=14.0.0",
    "pydantic-argparse>=0.10.0",
    "openai>=1.86.0",
    "pyyaml>=6.0.2",
    "pydantic-settings>=2.9.1",
    "slack-sdk>=3.35.0",
    "aiohttp>=3.12.12",
    "gitpython>=3.1.44",
    "tenacity>=9.1.2",
    "semantic-version>=2.10.0",
    "packaging>=25.0",
]
readme = "README.md"
license = { text = "MIT" }
requires-python = ">= 3.10"

[project.urls]
Homepage = "https://github.com/Ja-sonYun/security-checker"
Repository = "https://github.com/Ja-sonYun/security-checker.git"
Issues = "https://github.com/Ja-sonYun/security-checker/issues"

[project.scripts]
security-checker = "security_checker.cli:main"

[build-system]
requires = ["hatchling==1.26.3", "hatch-vcs"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = [
    "ruff>=0.11.13",
    "ty>=0.0.1a10",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/security_checker"]
